salesforce/force-app/main/default/objects/Account/fields/Open_Recruiting_Opps__c.field-meta.xml
<CustomField>
    <fullName>Open_Recruiting_Opps__c</fullName>
    <label>Open Recruiting Opps</label>
    <type>Summary</type>
    <summaryOperation>count</summaryOperation>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Recruiting</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Joined</value>
    </summaryFilterItems>
    <description>Count of open Recruiting Opportunities on this Account (excludes Closed Lost and Joined). Used to prevent re-engagement when an active recruiting opp already exists.</description>
    <inlineHelpText>Number of active Recruiting Opportunities (not Closed Lost or Joined) for this advisor.</inlineHelpText>
</CustomField>