salesforce/force-app/main/default/objects/Account/fields/Original_Closed_Lost_Details__c.field-meta.xml
<CustomField>
    <fullName>Original_Closed_Lost_Details__c</fullName>
    <label>Original Closed Lost Details</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <description>The Closed Lost Details from the earliest Recruiting opportunity on this account. Populated by the Populate_Original_Closed_Lost flow.</description>
    <inlineHelpText>Closed Lost Details from the first Recruiting opportunity for this advisor.</inlineHelpText>
</CustomField>