salesforce/force-app/main/default/objects/Account/fields/Original_Closed_Lost_Details_Short__c.field-meta.xml
<CustomField>
    <fullName>Original_Closed_Lost_Details_Short__c</fullName>
    <label>Original Closed Lost Details (Short)</label>
    <type>Text</type>
    <length>255</length>
    <description>Truncated (255-char) copy of Original_Closed_Lost_Details__c for use in Opportunity formula fields and list views. Full details remain in the LongTextArea field on Account.</description>
    <inlineHelpText>First 255 characters of the original Closed Lost Details. See the Account record for full details.</inlineHelpText>
</CustomField>