salesforce/force-app/main/default/objects/Account/fields/Original_Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Original_Closed_Lost_Reason__c</fullName>
    <label>Original Closed Lost Reason</label>
    <type>Text</type>
    <length>255</length>
    <description>The Closed Lost Reason from the earliest Recruiting opportunity on this account. Populated by the Populate_Original_Closed_Lost flow.</description>
    <inlineHelpText>Closed Lost Reason from the first Recruiting opportunity for this advisor.</inlineHelpText>
</CustomField>